libkuzu/kuzu.h


typedef struct {
    uint64_t buffer_pool_size;
    uint64_t max_num_threads;
    bool enable_compression;
    bool read_only;
    uint64_t max_db_size;
    bool auto_checkpoint;
    uint64_t checkpoint_threshold;
#if defined(__APPLE__)
    uint32_t thread_qos;
#endif
} kuzu_system_config;
typedef struct {
    void* _database;
} kuzu_database;
typedef struct {
    void* _connection;
} kuzu_connection;
typedef struct {
    void* _prepared_statement;
    void* _bound_values;
} kuzu_prepared_statement;
typedef struct {
    void* _query_result;
    bool _is_owned_by_cpp;
} kuzu_query_result;
typedef struct {
    void* _flat_tuple;
    bool _is_owned_by_cpp;
} kuzu_flat_tuple;
typedef struct {
    void* _data_type;
} kuzu_logical_type;
typedef struct {
    void* _value;
    bool _is_owned_by_cpp;
} kuzu_value;
typedef struct {
    int32_t days;
} kuzu_date_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_ns_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_ms_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_sec_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_tz_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_t;
typedef struct {
    int32_t months;
    int32_t days;
    int64_t micros;
} kuzu_interval_t;
typedef enum { KuzuSuccess = 0, KuzuError = 1 } kuzu_state;
KUZU_C_API kuzu_state kuzu_database_init(const char* database_path,
    kuzu_system_config system_config, kuzu_database* out_database);
KUZU_C_API void kuzu_database_destroy(kuzu_database* database);
KUZU_C_API kuzu_system_config kuzu_default_system_config();
KUZU_C_API kuzu_state kuzu_connection_init(kuzu_database* database,
    kuzu_connection* out_connection);
KUZU_C_API void kuzu_connection_destroy(kuzu_connection* connection);
KUZU_C_API kuzu_state kuzu_connection_set_max_num_thread_for_exec(kuzu_connection* connection,
    uint64_t num_threads);
KUZU_C_API kuzu_state kuzu_connection_get_max_num_thread_for_exec(kuzu_connection* connection,
    uint64_t* out_result);
KUZU_C_API kuzu_state kuzu_connection_query(kuzu_connection* connection, const char* query,
    kuzu_query_result* out_query_result);
KUZU_C_API kuzu_state kuzu_connection_prepare(kuzu_connection* connection, const char* query,
    kuzu_prepared_statement* out_prepared_statement);
KUZU_C_API kuzu_state kuzu_connection_execute(kuzu_connection* connection,
    kuzu_prepared_statement* prepared_statement, kuzu_query_result* out_query_result);
KUZU_C_API void kuzu_connection_interrupt(kuzu_connection* connection);
KUZU_C_API kuzu_state kuzu_connection_set_query_timeout(kuzu_connection* connection,
    uint64_t timeout_in_ms);
KUZU_C_API void kuzu_prepared_statement_destroy(kuzu_prepared_statement* prepared_statement);
KUZU_C_API bool kuzu_prepared_statement_is_success(kuzu_prepared_statement* prepared_statement);
KUZU_C_API char* kuzu_prepared_statement_get_error_message(
    kuzu_prepared_statement* prepared_statement);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_bool(kuzu_prepared_statement* prepared_statement,
    const char* param_name, bool value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_int64(
    kuzu_prepared_statement* prepared_statement, const char* param_name, int64_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_int32(
    kuzu_prepared_statement* prepared_statement, const char* param_name, int32_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_int16(
    kuzu_prepared_statement* prepared_statement, const char* param_name, int16_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_int8(kuzu_prepared_statement* prepared_statement,
    const char* param_name, int8_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_uint64(
    kuzu_prepared_statement* prepared_statement, const char* param_name, uint64_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_uint32(
    kuzu_prepared_statement* prepared_statement, const char* param_name, uint32_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_uint16(
    kuzu_prepared_statement* prepared_statement, const char* param_name, uint16_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_uint8(
    kuzu_prepared_statement* prepared_statement, const char* param_name, uint8_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_double(
    kuzu_prepared_statement* prepared_statement, const char* param_name, double value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_float(
    kuzu_prepared_statement* prepared_statement, const char* param_name, float value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_date(kuzu_prepared_statement* prepared_statement,
    const char* param_name, kuzu_date_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_timestamp_ns(
    kuzu_prepared_statement* prepared_statement, const char* param_name, kuzu_timestamp_ns_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_timestamp_sec(
    kuzu_prepared_statement* prepared_statement, const char* param_name,
    kuzu_timestamp_sec_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_timestamp_tz(
    kuzu_prepared_statement* prepared_statement, const char* param_name, kuzu_timestamp_tz_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_timestamp_ms(
    kuzu_prepared_statement* prepared_statement, const char* param_name, kuzu_timestamp_ms_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_timestamp(
    kuzu_prepared_statement* prepared_statement, const char* param_name, kuzu_timestamp_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_interval(
    kuzu_prepared_statement* prepared_statement, const char* param_name, kuzu_interval_t value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_string(
    kuzu_prepared_statement* prepared_statement, const char* param_name, const char* value);
KUZU_C_API kuzu_state kuzu_prepared_statement_bind_value(
    kuzu_prepared_statement* prepared_statement, const char* param_name, kuzu_value* value);
KUZU_C_API void kuzu_query_result_destroy(kuzu_query_result* query_result);
KUZU_C_API bool kuzu_query_result_is_success(kuzu_query_result* query_result);
KUZU_C_API char* kuzu_query_result_get_error_message(kuzu_query_result* query_result);
KUZU_C_API uint64_t kuzu_query_result_get_num_columns(kuzu_query_result* query_result);
KUZU_C_API kuzu_state kuzu_query_result_get_column_name(kuzu_query_result* query_result,
    uint64_t index, char** out_column_name);
KUZU_C_API kuzu_state kuzu_query_result_get_column_data_type(kuzu_query_result* query_result,
    uint64_t index, kuzu_logical_type* out_column_data_type);
KUZU_C_API uint64_t kuzu_query_result_get_num_tuples(kuzu_query_result* query_result);
KUZU_C_API bool kuzu_query_result_has_next(kuzu_query_result* query_result);
KUZU_C_API kuzu_state kuzu_query_result_get_next(kuzu_query_result* query_result,
    kuzu_flat_tuple* out_flat_tuple);
KUZU_C_API bool kuzu_query_result_has_next_query_result(kuzu_query_result* query_result);