KuzuDot/Native/NativeMethods.cs

using System;
using System.Runtime.InteropServices;
using KuzuDot.Native;
using KuzuDot.Native.Enums;

namespace KuzuDot.Native
{
    /// <summary>
    /// Wrapper for Native Kuzu methods via P/Invoke
    /// See libkuzu/kuzu.h for reference
    /// </summary>
    internal static class NativeMethods
    {
        private const string DllName = "kuzu_shared.dll";

        // Database functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_database_init([MarshalAs(UnmanagedType.LPStr)] string databasePath,
            KuzuSystemConfig systemConfig, out KuzuDatabase outDatabase);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_database_destroy(ref KuzuDatabase database);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuSystemConfig kuzu_default_system_config();

        // Connection functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_connection_init(ref KuzuDatabase database, out KuzuConnection outConnection);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_connection_destroy(ref KuzuConnection connection);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_connection_set_max_num_thread_for_exec(ref KuzuConnection connection, ulong numThreads);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_connection_get_max_num_thread_for_exec(ref KuzuConnection connection, out ulong outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_connection_query(ref KuzuConnection connection,
            [MarshalAs(UnmanagedType.LPStr)] string query, out KuzuQueryResult outQueryResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_connection_prepare(ref KuzuConnection connection,
            [MarshalAs(UnmanagedType.LPStr)] string query, out KuzuPreparedStatement outPreparedStatement);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_connection_execute(ref KuzuConnection connection,
            ref KuzuPreparedStatement preparedStatement, out KuzuQueryResult outQueryResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_connection_interrupt(ref KuzuConnection connection);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_connection_set_query_timeout(ref KuzuConnection connection, ulong timeoutInMs);

        // Prepared Statement functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_prepared_statement_destroy(ref KuzuPreparedStatement preparedStatement);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool kuzu_prepared_statement_is_success(ref KuzuPreparedStatement preparedStatement);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_prepared_statement_get_error_message(ref KuzuPreparedStatement preparedStatement);

        // Prepared Statement bind functions - all data types
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_bool(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, bool value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_int64(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, long value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_int32(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, int value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_int16(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, short value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_int8(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, sbyte value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_uint64(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, ulong value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_uint32(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, uint value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_uint16(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, ushort value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_uint8(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, byte value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_double(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, double value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_float(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, float value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_date(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, KuzuDate value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_timestamp(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, KuzuTimestamp value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_timestamp_ns(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, KuzuTimestampNs value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_timestamp_ms(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, KuzuTimestampMs value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_timestamp_sec(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, KuzuTimestampSec value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_timestamp_tz(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, KuzuTimestampTz value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_interval(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, KuzuInterval value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_string(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, [MarshalAs(UnmanagedType.LPStr)] string value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_prepared_statement_bind_value(ref KuzuPreparedStatement preparedStatement,
            [MarshalAs(UnmanagedType.LPStr)] string paramName, IntPtr value);

        // Query Result functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_query_result_destroy(ref KuzuQueryResult queryResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool kuzu_query_result_is_success(ref KuzuQueryResult queryResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_query_result_get_error_message(ref KuzuQueryResult queryResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ulong kuzu_query_result_get_num_columns(ref KuzuQueryResult queryResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_query_result_get_column_name(ref KuzuQueryResult queryResult,
            ulong index, out IntPtr outColumnName);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_query_result_get_column_data_type(ref KuzuQueryResult queryResult,
            ulong index, out KuzuLogicalTypeNative outColumnDataType);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ulong kuzu_query_result_get_num_tuples(ref KuzuQueryResult queryResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool kuzu_query_result_has_next(ref KuzuQueryResult queryResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_query_result_get_next(ref KuzuQueryResult queryResult, out KuzuFlatTuple outFlatTuple);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool kuzu_query_result_has_next_query_result(ref KuzuQueryResult queryResult);
